11_bucles_for_in.html

--- a/11_bucles_for_in.html
+++ b/11_bucles_for_in.html
@@ -10,7 +10,7 @@
 <body>
     <script>
         const persona = {
-            nombre: "Juan",
+            nombre: "Mariano",
             edad: 30,
             ciudad: "Río Grande"
         };
