--- a/21_variables.html
+++ b/21_variables.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <script>
-        let nombre = "Lautaro"
-        let apellido = "Villoldo"
+        let nombre = "Ambar"
+        let apellido = "Carrasco"
         document.write ("Nombre: ", nombre, " Apellido: ", apellido)
     </script>
 </body>
