--- a/9_bucles_for.html
+++ b/9_bucles_for.html
@@ -9,7 +9,7 @@
 
 <body>
     <script>
-        const nombres = ["Ana", "Carlos", "Sofia", "Mateo", "Valentina"];
+        const nombres = ["Maria", "Pedro", "Sofia", "Matias", "Valentina"];
         console.log("Nombres en el array:");
         for (let i = 0; i < nombres.length; i++) {
             console.log(nombres[i]);
